implement user cqrs and add common, repository lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,17 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/shared": [
-        "libs/shared/src"
+      "@app/common": [
+        "libs/common/src"
       ],
-      "@app/shared/*": [
-        "libs/shared/src/*"
+      "@app/common/*": [
+        "libs/common/src/*"
+      ],
+      "@app/repository": [
+        "libs/repository/src"
+      ],
+      "@app/repository/*": [
+        "libs/repository/src/*"
       ]
     }
   }
